# IndieStudio

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  clean_cmake.sh  test.cpp  test.txt  tmp.txt
Assets/maps/: map.irr  map.txt  playerpos.txt  savemap.txt
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMake/modules/: FindIrrKlang.cmake  FindIrrlicht.cmake  OutputColor.cmake
Tmp/: Makefile  tmp.txt
assets/: map.txt  official_bomberman_map.txt
conf/: data.conf
doc/latex/: Documentation.tex
include/: AI.hpp  Bomb.hpp  Character.hpp  Chrono.hpp  Controlable.hpp  Core.hpp  Deserializer.hpp  Drawable.hpp  Entity.hpp  Floor.hpp  IChrono.hpp  JsonParser.hpp  Map.hpp  Movable.hpp  MovableEntity.hpp  Object.hpp  Serializer.hpp  Static.hpp  StaticEntity.hpp  Wall.hpp
libraries/irrklang/windows/: irrKlang.lib:Zone.Identifier
release/: indie_studio
sources/: CMakeLists.txt  main.cpp
sources/AI/include/: AI.hpp
sources/AI/src/: AI.cpp
sources/Bomb/: CMakeLists.txt
sources/Bomb/include/: Bomb.hpp
sources/Bomb/src/: Bomb.cpp
sources/Character/: CMakeLists.txt
sources/Character/include/: Character.hpp  Controlable.hpp
sources/Character/src/: Character.cpp
sources/Chrono/: CMakeLists.txt
sources/Chrono/src/: Chrono.cpp
sources/Core/: CMakeLists.txt
sources/Core/include/: Core.hpp
sources/Core/src/: Core.cpp
sources/Deserializer/: CMakeLists.txt
sources/Deserializer/src/: Deserializer.cpp
sources/Drawable/: CMakeLists.txt
sources/Drawable/include/: AObject.hpp  Drawable.hpp  Object.hpp
sources/Error/include/: Error.hpp
sources/Error/src/: Error.cpp
sources/Explosion/include/: Explosion.hpp
sources/Explosion/src/: Explosion.cpp
sources/FileManagement/: CMakeLists.txt
sources/FileManagement/include/: FileManagement.hpp
sources/FileManagement/src/: FileManagement.cpp
sources/Floor/: CMakeLists.txt
sources/Floor/include/: Floor.hpp
sources/Floor/src/: Floor.cpp
sources/Game/include/: Game.hpp
sources/Game/src/: Game.cpp
sources/JsonParser/: CMakeLists.txt
sources/ManageMenu/include/: ManageMenu.hpp
sources/ManageMenu/src/: ManageMenu.cpp
sources/Map/: CMakeLists.txt
sources/Map/include/: Map.hpp
sources/MapGenerator/: CMakeLists.txt
sources/MapGenerator/include/: MapGenerator.hpp
sources/MapGenerator/src/: MapGenerator.cpp
sources/Menu/Button/: CMakeLists.txt
sources/Menu/Button/include/: Button.hpp
sources/Menu/Button/source/: Button.cpp
sources/Menu/Menu/include/: Menu.hpp
sources/Menu/Menu/source/: CMakeLists.txt  Menu.cpp
sources/Movable/: CMakeLists.txt
sources/Movable/include/: Movable.hpp
sources/Movable/src/: Movable.cpp
sources/MovableEntity/: CMakeLists.txt
sources/MovableEntity/include/: MovableEntity.hpp
sources/MovableEntity/src/: MovableEntity.cpp
sources/MyIrrlicht/include/: MyIrrlicht.hpp
sources/MyIrrlicht/src/: MyIrrlicht.cpp
sources/Serializer/: CMakeLists.txt
sources/Serializer/src/: Serializer.cpp
sources/Sound/include/: Sound.hpp
sources/Sound/src/: Sound.cpp
sources/StaticEntity/: CMakeLists.txt
sources/StaticEntity/include/: Static.hpp
sources/TMap/include/: TMap.hpp
sources/TMap/src/: TMap.cpp
sources/Wall/: CMakeLists.txt
sources/Wall/include/: Wall.hpp
sources/Wall/src/: Wall.cpp
sources/_Temp/: Enemy.hpp
src/: Bomb.cpp  Chrono.cpp  Core.cpp  Map.cpp  MapGenerator.cpp  main.cpp
src/ECS/: Drawable.cpp
src/Entity/: Character.cpp  Entity.cpp  Floor.cpp  MovableEntity.cpp  StaticEntity.cpp  Wall.cpp
src/Object/: Floor.cpp
src/Parser/: Deserializer.cpp  FileManagement.cpp  JsonParser.cpp  Serializer.cpp
