project("IndieStudio: BomberMan")

function(PrintLibCompilation)
    message("${Green}++ Début de la génération des libs du projet \"${PROJECT_NAME}\" ${ColourReset}")
endfunction()

function(SetLibs)
    add_subdirectory(Bomb)
    add_subdirectory(Character)
    add_subdirectory(Core)
    add_subdirectory(Drawable)
    add_subdirectory(Floor)
    add_subdirectory(Map)
    add_subdirectory(Movable)
    add_subdirectory(Serializer)
    add_subdirectory(Wall)
    add_subdirectory(Chrono)
    add_subdirectory(Deserializer)
    add_subdirectory(FileManagement)
    add_subdirectory(JsonParser)
    add_subdirectory(MapGenerator)
    add_subdirectory(MovableEntity)
    add_subdirectory(StaticEntity)
endfunction()

function(SetExecutable)
    add_executable(indie_studio main.cpp)
    if (Boost_FOUND AND Boost_INCLUDE_DIR AND IRRKLANG_INCLUDE_DIR AND IRRLICHT_INCLUDE_DIR AND OPENGL_INCLUDE_DIR)
        target_include_directories(indie_studio PRIVATE ${Boost_INCLUDE_DIR} PRIVATE ${IRRKLANG_INCLUDE_DIR} PRIVATE ${IRRLICHT_INCLUDE_DIR} PRIVATE ${OPENGL_INCLUDE_DIR})
    else (Boost_FOUND AND Boost_INCLUDE_DIR AND IRRKLANG_INCLUDE_DIR AND IRRLICHT_INCLUDE_DIR AND OPENGL_INCLUDE_DIR)
        target_include_directories(indie_studio PRIVATE ${IRRKLANG_INCLUDE_DIR} PRIVATE ${IRRLICHT_INCLUDE_DIR} PRIVATE ${OPENGL_INCLUDE_DIR})
    endif (Boost_FOUND AND Boost_INCLUDE_DIR AND IRRKLANG_INCLUDE_DIR AND IRRLICHT_INCLUDE_DIR AND OPENGL_INCLUDE_DIR)
    if (UNIX OR APPLE)
        set(UNIX_FLAGS -g -g3 -pthread)#-Wall -Werror -Wextra)
        target_compile_options(indie_studio PRIVATE ${UNIX_FLAGS})
    endif (UNIX OR APPLE)
    if(Boost_FOUND)
        target_link_libraries(indie_studio PUBLIC ${Boost_LIBRARIES} PUBLIC Bomb PUBLIC Character PUBLIC Core PUBLIC Drawable PUBLIC Floor PUBLIC Map PUBLIC Movable PUBLIC Serializer PUBLIC Wall PUBLIC Chrono PUBLIC Deserializer PUBLIC FileManagement PUBLIC JsonParser PUBLIC MapGenerator PUBLIC MovableEntity PUBLIC StaticEntity PRIVATE ${IRRLICHT_LIBRARY} PRIVATE ${IRRLICHT_LIBRARY} PRIVATE ${OPENGL_LIBRARIES})
    else(Boost_FOUND)
        target_link_libraries(indie_studio PUBLIC Bomb PUBLIC Character PUBLIC Core PUBLIC Drawable PUBLIC Floor PUBLIC Map PUBLIC Movable PUBLIC Serializer PUBLIC Wall PUBLIC Chrono PUBLIC Deserializer PUBLIC FileManagement PUBLIC JsonParser PUBLIC MapGenerator PUBLIC MovableEntity PUBLIC StaticEntity PRIVATE ${IRRLICHT_LIBRARY} PRIVATE ${IRRLICHT_LIBRARY} PRIVATE ${OPENGL_LIBRARIES})
    endif(Boost_FOUND)
endfunction()

function(DisplayReadyMessage)
    message("${Green}++ Le binaire nommé indie_studio est prêt à être généré. ${ColourReset}")
endfunction()

PrintLibCompilation()
SetLibs()
SetExecutable()
DisplayReadyMessage()